# cmrx-integration-tests

./: .mxproject  CMakeLists.txt  README.txt  tmp-cmrx-integration-build.ioc
.github/workflows/: integration-build.yml
Core/Inc/: main.h
Core/Src/blinky/: blinky.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
rp2040-pico-sdk/: CMakeLists.txt
rp2040-pico-sdk/src/: main.c
rp2040-pico-sdk/src/blinky/: CMakeLists.txt  blinky.c
stm32g4-cubemx/: .mxproject  CMakeLists.txt  stm32g4-cubemx.ioc  stm32g491cctx_flash.ld
stm32g4-cubemx/Core/Inc/: main.h  stm32g4xx_it.h
stm32g4-cubemx/Core/Src/: main.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c
stm32g4-cubemx/Core/Src/blinky/: blinky.c
stm32g4-cubemx/cmake/: gcc-arm-none-eabi.cmake
stm32g4-cubemx/cmake/stm32cubemx/: CMakeLists.txt
stm32h7-cubemx/: stm32h753vihx_flash.ld
stm32h7-cubemx/Core/Src/: main.c
stm32h7-cubemx/Core/Src/blinky/: CMakeLists.txt
